# SSL-DNS-DomainHealth

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: domains.example.json  domains.example.yaml
src/domain_sentinel/: cli.py  config.py  models.py  runner.py  severity.py
src/domain_sentinel/checks/: __init__.py  dns.py  domain_expiration.py  http.py  redirect.py  security_headers.py  ssl.py
src/domain_sentinel/diff/: __init__.py  compare.py
src/domain_sentinel/report/: __init__.py  csv_report.py  html_report.py  json_report.py
src/domain_sentinel/storage/: __init__.py  snapshots.py
tests/: _bootstrap.py  test_config.py  test_diff.py  test_domain_expiration.py  test_reports.py  test_security_headers.py  test_severity.py  test_ssl.py
